crates/panache-parser/tests/snapshots/yaml__yaml_suite_DK4H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: DK4H
input: "---\n[ key\n  : value ]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:implicit key in flow context cannot span lines@12..13]
