crates/panache-parser/tests/snapshots/yaml__yaml_suite_DWX9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: DWX9
input: "|\n \n  \n  literal\n   \n  \n  text\n\n # Comment\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
