crates/panache-parser/tests/snapshots/yaml__yaml_suite_E76Z.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: E76Z
input: "&a a: &b b\n*b : *a\n"
has_error_contract: false
parsed_mapping_tree: true
