crates/panache-parser/tests/snapshots/yaml__yaml_suite_EW3V.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: EW3V
input: "k1: v1\n k2: v2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:implicit key cannot span lines@4..10]
