crates/panache-parser/tests/snapshots/yaml__yaml_suite_EX5H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: EX5H
input: "---\na\nb  \n  c\nd\n\ne\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
