crates/panache-parser/tests/snapshots/yaml__yaml_suite_F2C7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: F2C7
input: " - &a !!str a\n - !!int 2\n - !!int &c 4\n - &d d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
