crates/panache-parser/tests/snapshots/yaml__yaml_suite_F3CP.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: F3CP
input: "---\n{ a: [b, c, { d: [e, f] } ] }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
