crates/panache-parser/tests/snapshots/yaml__yaml_suite_F6MC.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: F6MC
input: "---\na: >2\n   more indented\n  regular\nb: >2\n\n\n   more indented\n  regular\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
