crates/panache-parser/tests/snapshots/yaml__yaml_suite_F8F9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: F8F9
input: " # Strip\n  # Comments:\nstrip: |-\n  # text\n  \n # Clip\n  # comments:\n\nclip: |\n  # text\n \n # Keep\n  # comments:\n\nkeep: |+\n  # text\n\n # Trail\n  # comments.\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
